--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,4 +3,5 @@
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   <li><a href="{{ root_url }}/about/">Hobbies</a></li>
   <li><a href="{{ root_url }}/resume/resume.pdf">Resume</a></li>
+  <li><a href="{{ root_url }}/images/bird_32_gray.png">test</a></li>
 </ul>
