--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,6 +1,6 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>Projects</h1>
+  <!-- <p>A little something about me.</p> -->
   <p><a href="http://blog.nicksdevspot.com">[old] blog.nicksdevspot</a></p> 
   <p><a href="http://upload-app.nicksdevspot.com">upload-app.nicksdevspot</a></p> 
   <p><a href="http://sample-app.nicksdevspot.com">sample-app.nicksdevspot</a></p>
