--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/about/">Hobbies</a></li>
+  <li><a href="{{ root_url }}/about/">About Me</a></li>
   <li><a href="{{ root_url }}/resume/Resume.pdf">Resume</a></li>
 </ul>
