--- a/source/_includes/custom/asides/projects.html
+++ b/source/_includes/custom/asides/projects.html
@@ -1,10 +1,10 @@
 <section>
   <h1>Some Projects</h1>
   <ul id="projects">
-    <li class="project"><a href="http://blog.nicklau.io/">Old Blog</a></li>
-    <li class="project"><a href="http://upload-app.nicklau.io/">Photo Upload App</a></li>
-    <li class="project"><a href="http://sample-app.nicklau.io/">Sample App</a></li>
-    <li class="project"><a href="http://www.nicklau.io/">Raspberry Pi (Coming Soon)</a></li>
-    <li class="project"><a href="http://www.nicklau.io/">Javascript Game (Coming Soon)</a></li>
+    <li class="project"><a href="blog.nicklau.io/">Old Blog</a></li>
+    <li class="project"><a href="upload-app.nicklau.io/">Photo Upload App</a></li>
+    <li class="project"><a href="sample-app.nicklau.io/">Sample App</a></li>
+    <li class="project"><a href={{ root_url }} /blog/2015/12/01/raspberry-pi-alarm/ }>Raspberry Pi Alarm (Under Construction)</a></li>
+    <li class="project"><a href={{ root_url }} /blog/2015/12/07/learning-javascript/ }>Javascript Game (Under Construction)</a></li>
   </ul>
 </section>
